code: replace deprecated settings and update some more

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -1,30 +1,32 @@
 {
     "files.trimTrailingWhitespace": true,
-    "telemetry.enableCrashReporter": false,
-    "telemetry.enableTelemetry": false,
+    "telemetry.telemetryLevel": "off",
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
     "editor.multiCursorModifier": "ctrlCmd",
-    "editor.fontFamily": "'Source Code Pro','Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "editor.fontFamily": "'Sauce Code Pro','Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
     "editor.accessibilitySupport": "off",
     "editor.renderControlCharacters": true,
     "editor.showFoldingControls": "always",
+    "editor.cursorStyle": "line",
+    "editor.lineNumbers": "on",
+    "editor.renderWhitespace": "boundary",
+    "editor.trimAutoWhitespace": true,
     "editor.formatOnSave": true,
     "workbench.enableExperiments": false,
     "workbench.startupEditor": "none",
     "workbench.tips.enabled": false,
     "workbench.editor.labelFormat": "medium",
     "workbench.settings.enableNaturalLanguageSearch": false,
-    "window.menuBarVisibility": "hidden",
+    "window.menuBarVisibility": "compact",
     "window.customMenuBarAltFocus": false,
     "window.enableMenuBarMnemonics": false,
     "search.smartCase": true,
     "debug.inlineValues": true,
-    "extensions.showRecommendationsOnlyOnDemand": true,
-    "python.autoComplete.addBrackets": true,
-    "python.pythonPath": "python3",
+    "extensions.ignoreRecommendations": true,
     "python.venvPath": "~/.virtualenvs",
-    "python.formatting.provider": "autopep8",
+    "python.formatting.provider": "black",
+    "python.languageServer": "Pylance",
     "vim.foldfix": true,
     "vim.hlsearch": true,
     "vim.leader": " ",
@@ -32,10 +34,11 @@
         "<C-k>": false
     },
     "vim.useSystemClipboard": true,
+    "vim.highlightedyank.enable": true,
+    "vim.highlightedyank.duration": 400,
     "workbench.editor.enablePreview": true,
     "workbench.editor.enablePreviewFromQuickOpen": false,
     "C_Cpp.clang_format_fallbackStyle": "llvm",
-    "workbench.colorTheme": "Dracula",
     "workbench.colorCustomizations": {
         "editor.lineHighlightBorder": "#243443",
         "editor.lineHighlightBackground": "#243443",
@@ -51,6 +54,10 @@
         "editor.tabSize": 2
     },
     "git.untrackedChanges": "separate",
-    "terminal.integrated.shell.linux": "/bin/zsh",
+    "terminal.integrated.defaultProfile.linux": "fish",
+    "terminal.integrated.defaultProfile.osx": "fish",
+    "terminal.integrated.fontFamily": "\"SauceCodePro NF\"",
     "problems.showCurrentInStatus": true,
+    "workbench.preferredDarkColorTheme": "Dracula",
+    "workbench.colorTheme": "Dracula",
 }
